# splicpp

./: LICENSE  README.md
docs/: bnf-grammar  grammar
src/: CMakeLists.txt  main.cpp
src/ast/: ast.cpp  ast.hpp  ast_construct.cpp  ast_construct.hpp  ast_decl.cpp  ast_decl.hpp  ast_exp.cpp  ast_exp.hpp  ast_f_arg.cpp  ast_f_arg.hpp  ast_fun_call.cpp  ast_fun_call.hpp  ast_fun_decl.cpp  ast_fun_decl.hpp  ast_id.cpp  ast_id.hpp  ast_prog.cpp  ast_prog.hpp  ast_stmt.cpp  ast_stmt.hpp  ast_type.cpp  ast_type.hpp  ast_var_decl.cpp  ast_var_decl.hpp
src/backends/ssm/: ssm_context.hpp  ssm_instructions.hpp  ssm_tiles.hpp  ssm_translator.cpp  ssm_translator.hpp  ssm_tresult.cpp  ssm_tresult.hpp
src/common/: cfgraph.hpp  dgraph.hpp  errors.hpp  generic.h  generic.hpp  grammar.cpp  grammar.h  grammar.hpp  graphcoloring.hpp  io.hpp  ptable.h  rule.cpp  rule.h  rule.hpp  sloc.cpp  sloc.hpp  symbols.cpp  symbols.h  symbols.hpp  token.cpp  token.h  token.hpp  tree.hpp  typedefs.h  typedefs.hpp  udgraph.hpp  utils.hpp
src/grammars/: bnf.bnf  spl.bnf  test.bnf
src/ir/: ir_exp.cpp  ir_exp.hpp  ir_exp_binop.cpp  ir_exp_binop.hpp  ir_exp_call.cpp  ir_exp_call.hpp  ir_exp_const.cpp  ir_exp_const.hpp  ir_exp_eseq.cpp  ir_exp_eseq.hpp  ir_exp_mem.cpp  ir_exp_mem.hpp  ir_exp_name.cpp  ir_exp_name.hpp  ir_exp_temp.cpp  ir_exp_temp.hpp  ir_stmt.cpp  ir_stmt.hpp  ir_stmt_call.cpp  ir_stmt_call.hpp  ir_stmt_cjump.cpp  ir_stmt_cjump.hpp  ir_stmt_exp.cpp  ir_stmt_exp.hpp  ir_stmt_jump.cpp  ir_stmt_jump.hpp  ir_stmt_label.cpp  ir_stmt_label.hpp  ir_stmt_move.cpp  ir_stmt_move.hpp  ir_stmt_seq.cpp  ir_stmt_seq.hpp  ircontext.cpp  ircontext.hpp
src/mappers/: ast_decl_analyser.cpp  ast_decl_analyser.hpp  ir_call_transformer.cpp  ir_call_transformer.hpp  ir_cf_analyser.cpp  ir_cf_analyser.hpp  ir_desequencer.cpp  ir_desequencer.hpp  ir_frame_transformer.cpp  ir_frame_transformer.hpp  ir_label_analyser.cpp  ir_label_analyser.hpp  ir_liveness_analyser.cpp  ir_liveness_analyser.hpp  ir_temp_allocator.cpp  ir_temp_allocator.hpp  ir_temp_analyser.cpp  ir_temp_analyser.hpp  ir_temp_saver.cpp  ir_temp_saver.hpp  ir_usage_analyser.cpp  ir_usage_analyser.hpp
src/mappers/generic/: ast_exp_mapper.hpp  ast_stmt_mapper.hpp  ir_exp_mapper.hpp  ir_mapper.hpp  ir_stmt_mapper.hpp
src/parser/: bnf.h  bnf.hpp  bnf_bootstrap.hpp  bnf_bootstrap_parser.cpp  bnf_bootstrap_parser.hpp  bnf_parser.cpp  bnf_parser.h  bnf_parser.hpp  clr_parser_gen.cpp  clr_parser_gen.hpp  cst.h  cst_element.cpp  cst_element.h  cst_element.hpp  cst_node.cpp  cst_node.h  cst_node.hpp  item.h  item.hpp  itemset.h  itemset.hpp  lexer.cpp  lexer.h  lexer.hpp  ptable.cpp  ptable.h  ptable.hpp  slr_parser_gen.h  slr_parser_gen.hpp  spl.hpp  spl_lexer.h  spl_parser.cpp  spl_parser.hpp
src/parser/tests/: slr_test0.h
src/tests/parser/: fac.spl
src/transformers/: ir_desequencer.cpp  ir_desequencer.hpp
src/transformers/generic/: ir_exp_transformer.hpp  ir_gen_transformer.hpp  ir_stmt_transformer.hpp
src/typing/: ltypecontext.cpp  ltypecontext.hpp  substitution.cpp  substitution.hpp  symboltable.cpp  symboltable.hpp  typecontext.cpp  typecontext.hpp  unification_error.hpp  varcontext.cpp  varcontext.hpp
src/typing/types/: sl_polytype.cpp  sl_polytype.hpp  sl_type.cpp  sl_type.hpp  sl_type_array.cpp  sl_type_array.hpp  sl_type_bool.cpp  sl_type_bool.hpp  sl_type_function.cpp  sl_type_function.hpp  sl_type_int.cpp  sl_type_int.hpp  sl_type_tuple.cpp  sl_type_tuple.hpp  sl_type_unbound.cpp  sl_type_unbound.hpp  sl_type_universal.cpp  sl_type_universal.hpp  sl_type_void.cpp  sl_type_void.hpp
tests/parser/: fac.spl  gcd.spl
tests/typing/: aliasing.spl  auto.spl
